Add per json loading of constraints. Needs testing. Also fix warnings