@@ -2,33 +2,29 @@ package com.team254.frc2020.paths;
 
 import com.team195.json.Pose2dJson;
 import com.team195.json.TrajectoryJson;
-import com.team195.json.TrajectoryLoader;
 import com.team254.frc2020.planners.DriveMotionPlanner;
 import com.team254.lib.geometry.Pose2d;
 import com.team254.lib.geometry.Pose2dWithCurvature;
 import com.team254.lib.geometry.Rotation2d;
-import com.team254.lib.geometry.Translation2d;
 import com.team254.lib.trajectory.Trajectory;
 import com.team254.lib.trajectory.timing.CentripetalAccelerationConstraint;
 import com.team254.lib.trajectory.timing.TimedState;
 import com.team254.lib.trajectory.timing.TimingConstraint;
-import com.google.gson.*;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
-@SuppressWarnings("ALL")
 public class TrajectoryGenerator {
-    // TODO tune
+    // TODO tune default values
     private static final double kMaxVel = 150.0;
     private static final double kMaxAccel = 100.0;
     private static final double kMaxVoltage = 9.0;
     private static final double kMaxCentripetalAccel = 60.0;
 
-    private static TrajectoryGenerator mInstance = new TrajectoryGenerator();
+    private static final TrajectoryGenerator mInstance = new TrajectoryGenerator();
     private static final DriveMotionPlanner mMotionPlanner = new DriveMotionPlanner();
+
     private TrajectorySet mTrajectorySet = null;
 
     public static TrajectoryGenerator getInstance() {
@@ -38,10 +34,6 @@ public class TrajectoryGenerator {
     private TrajectoryGenerator() {}
 
     public HashMap<Integer, Trajectory<TimedState<Pose2dWithCurvature>>> trajectoryLookupMap = new HashMap<>();
-
-    public void generateTrajectories() {
-        generateTrajectories(null);
-    }
 
     public void generateTrajectories(ArrayList<TrajectoryJson> arrTraj)
     {
@@ -61,10 +53,6 @@ public class TrajectoryGenerator {
         }
     }
 
-    public TrajectorySet getTrajectorySet() {
-        return mTrajectorySet;
-    }
-
     public static Trajectory<TimedState<Pose2dWithCurvature>> generateTrajectory(
             boolean reversed,
             final List<Pose2dJson> waypoints,
@@ -79,29 +67,6 @@ public class TrajectoryGenerator {
         return mMotionPlanner.generateTrajectory(reversed, wp, constraints, max_vel, max_accel, max_voltage);
     }
 
-//    public static Trajectory<TimedState<Pose2dWithCurvature>> generateTrajectory(
-//            boolean reversed,
-//            final List<Pose2d> waypoints,
-//            final List<TimingConstraint<Pose2dWithCurvature>> constraints,
-//            double max_vel,  // inches/s
-//            double max_accel,  // inches/s^2
-//            double max_voltage) {
-//        return mMotionPlanner.generateTrajectory(reversed, waypoints, constraints, max_vel, max_accel, max_voltage);
-//    }
-
-//    public static Trajectory<TimedState<Pose2dWithCurvature>> generateTrajectory(
-//            boolean reversed,
-//            final List<Pose2d> waypoints,
-//            final List<TimingConstraint<Pose2dWithCurvature>> constraints,
-//            double start_vel,  // inches/s
-//            double end_vel,  // inches/s
-//            double max_vel,  // inches/s
-//            double max_accel,  // inches/s^2
-//            double max_voltage) {
-//        return mMotionPlanner.generateTrajectory(reversed, waypoints, constraints, start_vel, end_vel, max_vel, max_accel, max_voltage);
-//    }
-
-    @SuppressWarnings("DuplicatedCode")
     public class TrajectorySet {
         //Test
         public final Trajectory<TimedState<Pose2dWithCurvature>> testTrajectory;
@@ -119,18 +84,21 @@ public class TrajectoryGenerator {
             testTrajectory = getTestTrajectory();
             testTrajectoryBack = getTestTrajectoryBack();
 
+            for (TrajectoryJson tj: arrTraj)
+            {
+                //////////////////////////////////////////////////////////////////////////
+                //If the json has particular constraints, use those, else, use the defaults
+                double maxVel = tj.maxVel > 0 ? tj.maxVel : kMaxVel;
+                double maxAccel = tj.maxAccel > 0 ? tj.maxAccel : kMaxAccel;
+                double maxVoltage = tj.maxVoltage > 0 ? tj.maxVoltage : kMaxVoltage;
+                double maxCentripetalAccel = tj.maxCentripetalAccel > 0 ? tj.maxCentripetalAccel : kMaxCentripetalAccel;
+                //////////////////////////////////////////////////////////////////////////
 
-
-            for (TrajectoryJson tj: arrTraj) {
                  Trajectory<TimedState<Pose2dWithCurvature>> generated_trajectory =
-                         generateTrajectory(tj.reversed, tj.waypoints, Arrays.asList(new CentripetalAccelerationConstraint(kMaxCentripetalAccel)), kMaxVel, kMaxAccel, kMaxVoltage);
+                         generateTrajectory(tj.reversed, tj.waypoints, List.of(new CentripetalAccelerationConstraint(maxCentripetalAccel)), maxVel, maxAccel, maxVoltage);
 
                  System.out.println("Putting Trajectory ID " + tj.id + " in the map.");
-                 // System.out.println(generated_trajectory);
-
                  trajectoryLookupMap.put(tj.id, generated_trajectory);
-
-                 // System.out.println(trajectoryLookupMap);
             }
         }
 
@@ -138,7 +106,7 @@ public class TrajectoryGenerator {
             List<Pose2dJson> waypoints = new ArrayList<>();
             waypoints.add(new Pose2dJson(0, 0, 180, ""));
             waypoints.add(new Pose2dJson(-120, 120, 90, ""));
-            return generateTrajectory(false, waypoints, Arrays.asList(new CentripetalAccelerationConstraint(kMaxCentripetalAccel)),
+            return generateTrajectory(false, waypoints, List.of(new CentripetalAccelerationConstraint(kMaxCentripetalAccel)),
                     kMaxVel, kMaxAccel, kMaxVoltage);
         }
 
@@ -146,7 +114,7 @@ public class TrajectoryGenerator {
             List<Pose2dJson> waypoints = new ArrayList<>();
             waypoints.add(new Pose2dJson(-120, 120, 90, ""));
             waypoints.add(new Pose2dJson(0, 0, 180, ""));
-            return generateTrajectory(true, waypoints, Arrays.asList(new CentripetalAccelerationConstraint(kMaxCentripetalAccel)),
+            return generateTrajectory(true, waypoints, List.of(new CentripetalAccelerationConstraint(kMaxCentripetalAccel)),
                     kMaxVel, kMaxAccel, kMaxVoltage);
         }
     }
